--- a/index.html
+++ b/index.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html> 
 <html lang="en"> 
 <head> 
-	<title>Futzing around with CoffeeScript</title>
+	<title>Futzing around with code</title>
   <meta name="description" content="CoffeeScript programming playground..."> 
   <meta name="keywords" content="programming, javascript, coffeescript, code">
   <link rel="stylesheet" media="screen" href="css/style.css">
 </head>
 
 <body>
- <section id="content">
-  	<h1><a href="https://github.com/Srdjan/futz-1">djidja8</a></h1>
-    <p id="tag"><em>futzing</em>, <em>around</em>, <em>for fun...</em></p>	
-
-  	<h2>/ futz-1 /  bouncing ball music /</h2>
+	<section id="content">
+  
+  	<h1><a href="http://srdjan.strbanovic.com">@djidja8</a></h1>
+    <h2 class="shadow" id="tag">/ futz #1 /  bouncing ball music /</h2>
+		
 		<pre>
-			<code>
-				<canvas id="canvas" width="300" height="200"></canvas>
-			</code>
+			<canvas id="canvas" width="800" height="200"></canvas>
 		</pre>
+	
 	</section>
+
+	<footer>
+		<a class="linkopacity" href="http://twitter.com/djidja8"><img src="img/twitter.png"/></a>
+		<a class="linkopacity" href="https://github.com/Srdjan/futz-1"><img src="img/git.png"/></a>
+	</footer>
 
   <script type="text/javascript" src="lib/jquery-1.7.1.js"></script>
 	<script type="text/javascript" src="index.js"></script>
