--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 	<section id="content">
   
   	<h1><a href="http://srdjan.strbanovic.com">@djidja8</a></h1>
-    <h2 class="shadow" id="tag">/ futz #1 /  bouncing ball music /</h2>
+    <h2 class="shadow" id="tag">/ futzing around / #1 /  bouncing ball music / &#x2669; /</h2>
 		
 		<pre>
-			<canvas id="canvas" width="800" height="200"></canvas>
+			<canvas id="canvas" width="820" height="220"></canvas>
 		</pre>
 	
 	</section>
