--- a/index.html
+++ b/index.html
@@ -9,20 +9,19 @@
 
 <body>
 	<section id="content">
-  
-  	<h1><a href="http://srdjan.strbanovic.com">@djidja8</a></h1>
-    <h2 class="shadow" id="tag">/ futzing around / #1 /  bouncing ball music / &#x2669; /</h2>
+   	<h1><a href="http://srdjan.strbanovic.com">@djidja8</a></h1>
+    <h2 class="shadow" id="tag">/ futzing around / #1 /  bouncing ball music / &#x2669; /
+			<div id="header">
+				<a class="linkopacity" href="http://twitter.com/djidja8"><img src="img/twitter.png"/></a>
+				<a class="linkopacity" href="https://github.com/Srdjan/futz-1"><img src="img/github.png"/></a>
+			</div>
+    </h2>
 		
 		<pre>
 			<canvas id="canvas" width="820" height="220"></canvas>
 		</pre>
 	
 	</section>
-
-	<footer>
-		<a class="linkopacity" href="http://twitter.com/djidja8"><img src="img/twitter.png"/></a>
-		<a class="linkopacity" href="https://github.com/Srdjan/futz-1"><img src="img/git.png"/></a>
-	</footer>
 
   <script type="text/javascript" src="lib/jquery-1.7.1.js"></script>
 	<script type="text/javascript" src="index.js"></script>
