--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
 	<section id="content">
    	<h1><a href="http://srdjan.strbanovic.com">@djidja8</a></h1>
-    <h2 class="shadow" id="tag">/ futzing around / #1 /  bouncing ball music / &#x2669; /
-			<div id="header">
+    <h2 class="shadow" id="tag">// futzing around... // #1 bouncing ball music  &#x2669;
+			<p id="header">
 				<a class="linkopacity" href="http://twitter.com/djidja8"><img src="img/twitter.png"/></a>
 				<a class="linkopacity" href="https://github.com/Srdjan/futz-1"><img src="img/github.png"/></a>
-			</div>
+			</p>
     </h2>
 		
 		<pre>
