using jsfx to genererate audio

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<section id="content">
    	<h1><a href="http://srdjan.strbanovic.com">@djidja8</a></h1>
-    <h2 class="shadow" id="tag">// futzing around... // #1 bouncing ball music  &#x2669;
+    <h2 class="shadow" id="tag">/ futzing around... / #1 bouncing ball music  &#x2669;
 			<p id="header">
 				<a class="linkopacity" href="http://twitter.com/djidja8"><img src="img/twitter.png"/></a>
 				<a class="linkopacity" href="https://github.com/Srdjan/futz-1"><img src="img/github.png"/></a>
@@ -18,12 +18,15 @@
     </h2>
 		
 		<pre>
-			<canvas id="canvas" width="820" height="220"></canvas>
+			<canvas id="canvas" width="800" height="500"></canvas>
 		</pre>
 	
 	</section>
 
   <script type="text/javascript" src="lib/jquery-1.7.1.js"></script>
+  <script type="text/javascript" src="lib/audio.js"></script>
+  <script type="text/javascript" src="lib/jsfxlib.js"></script>
+  <script type="text/javascript" src="lib/jsfx.js"></script>
 	<script type="text/javascript" src="index.js"></script>
 </body>
 </html>
