--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<section id="content">
    	<h1><a href="http://srdjan.strbanovic.com">@djidja8</a></h1>
-    <h2 class="shadow" id="tag">/ futzing around... / #1 bouncing ball music  &#x2669;
+    <h2 class="shadow" id="tag">/ futzing around with coffeescript... / #1 bouncing ball music  &#x2669;
 			<p id="header">
 				<a class="linkopacity" href="http://twitter.com/djidja8"><img src="img/twitter.png"/></a>
 				<a class="linkopacity" href="https://github.com/Srdjan/futz-1"><img src="img/github.png"/></a>
