--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2 class="shadow" id="tag">/ futzing around with coffeescript... / #1 bouncing ball music  &#x2669;
 			<p id="header">
 				<a class="linkopacity" href="http://twitter.com/djidja8"><img src="img/twitter.png"/></a>
-				<a class="linkopacity" href="https://github.com/Srdjan/futz-1"><img src="img/github.png"/></a>
+				<a class="linkopacity" href="https://srdjan.github.com"><img src="img/github.png"/></a>
 			</p>
     </h2>
 		
