removed bouincing ball

--- a/index.html
+++ b/index.html
@@ -3,32 +3,12 @@
 <html>
   <head>
     <title>Personal Github page</title>
-    <style type="text/css">
-      body {
-        font-family: Monospace;
-        font-size: 24px;
-        line-height: 110%;
-      }
-
-      div.container {
-        height: 30em;
-        position: relative;
-      }
-
-      div.container div.content {
-        margin: 0;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        margin-right: -50%;
-        transform: translate(-50%, -50%);
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
     <div class="container">
       <div class="content">
-        <p>
+        <p class="header">
           Srdjan Strbanovic<br />
           Software Engineer<br />
           NYC Tri-State area<br />
@@ -36,22 +16,22 @@
         </p>
 
         <p>
-          Portals<br />
-          -> <a href="https://github.com/srdjan">github.com/srdjan</a><br />
-          -> <a href="http://gotium.com">blog.srdjan @ gotium.com</a><br />
-          -> <a href="https://twitter.com/djidja8">@twitter</a>
+          <h2>Portals</h2>
+          • <a href="https://github.com/srdjan">github.com/srdjan</a><br />
+          • <a href="http://gotium.com">blog.srdjan @ gotium.com</a><br />
+          • <a href="https://twitter.com/djidja8">@twitter</a>
         </p>
 
         <p>
-          Work, now<br />
-          -> Co-Founder & Chief Architect @ KlinchIt.app<br />
+          <h2>Work, now</h2>
+          • Co-Founder & Chief Architect @ KlinchIt.app<br />
         </p>
 
         <p>
-          Work, before<br />
-          -> Chief Architect @ Lifion by ADP<br />
-          -> Principal Architect @ ThoughtWorks<br />
-          -> CTO  @ Cignium<br />
+          <h2>Work, before</h2>
+          • Chief Architect @ Lifion by ADP<br />
+          • Principal Architect @ ThoughtWorks<br />
+          • CTO  @ Cignium<br />
         </p>
       </div>
     </div>
