--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
         <p class="header">
           Srdjan Strbanovic<br />
           Software Engineer<br />
-          NYC Tri-State area<br />
-          srdjan@timok.com<br />
+          NYC Tri-State Area<br />
         </p>
 
         <p>
           <h2>Portals</h2>
-          • <a href="https://github.com/srdjan">github.com/srdjan</a><br />
-          • <a href="http://gotium.com">blog.srdjan @ gotium.com</a><br />
+          • <a href="http://github.com/srdjan">@github</a><br />
+          • <a href="http://gotium.com">@blog</a><br />
           • <a href="https://twitter.com/djidja8">@twitter</a>
         </p>
 
