--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <p>
           <h2>Work, now</h2>
-          • Co-Founder & Chief Architect @ KlinchIt.app<br />
+          • Co-Founder & CTO @ <a href="https://klinchit.app">KlinchIt.app</a><br />
         </p>
 
         <p>
