--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       html {
         height: 100%;
         margin: 0 auto;
-        max-width: 42em;
+        max-width: 46em;
       }
 
       body {
@@ -19,8 +19,7 @@
 
       header {
         top: 11rem;
-        font-family: Monospace;
-        font-size: 1.55rem;
+        font: 1.55rem/1.5 Monospace;
         line-height: 110%;
         margin-top: 3rem;
       }
@@ -32,10 +31,10 @@
         font: 1.1rem/1.7 'Helvetica Neue', Helvetica, Arial, sans-serif;
         color: rgb(25, 37, 63);
         border-bottom: #6e6b6b;
-        max-width: 70%;
+        max-width: 80%;
       }
 
-      a {
+      article a {
         color:rgb(25, 37, 63);
         background-image: linear-gradient(120deg, #dadbde 50%, #f8fafa 100%);
         background-repeat: no-repeat;
@@ -44,7 +43,7 @@
         text-decoration: none;
         transition: background-size 0.25s ease-in;
       }
-      a:hover {
+      article a:hover {
         background-size: 100% 68%;
         cursor: pointer;
       }
@@ -63,7 +62,9 @@
         }
         article {
           top: 6rem;
-          font: 2rem/1.7 'Helvetica Neue', Helvetica, Arial, sans-serif;
+          left: 1.5rem;
+          font: 1.5rem/1.7 'Helvetica Neue', Helvetica, Arial, sans-serif;
+          max-width: 100%;
         }
         h2 {
           font-size: 3rem;
@@ -87,7 +88,7 @@
 
     <article>
       <h2>Work, now</h2>
-      • Co-Founder & CTO @ <a href="https://klinchit.app">KlinchIt.app</a><br />
+      • Co-Founder & CTO <a href="https://klinchit.app">@KlinchIt.app</a><br />
     </article>
 
     <article>
