--- a/index.html
+++ b/index.html
@@ -6,40 +6,38 @@
       html {
         height: 100%;
         margin: 0 auto;
-        max-width: 46em;
+        max-width: 45em;
       }
 
       body {
         margin: 0; 
         padding: 0;
-        border-top: 15px solid rgb(213, 214, 216);
+        border-top: 25px solid rgb(213, 214, 216);
         color:rgb(25, 37, 63);
         text-align: center;
       }
 
       header {
-        top: 11rem;
-        font: 1.55rem/1.5 Monospace;
         line-height: 110%;
         margin-top: 3rem;
+        font: 1.1rem/1.3 "Lucida Console", Monaco, monospace;
       }
 
       article {
         position: relative;
         top: 1rem;
-        left: 6rem;
-        font: 1.1rem/1.7 'Helvetica Neue', Helvetica, Arial, sans-serif;
-        color: rgb(25, 37, 63);
+        left: 4.5rem;
         border-bottom: #6e6b6b;
         max-width: 80%;
+        font: 1rem/1.5 "Lucida Console", Monaco, monospace;
       }
 
       article a {
         color:rgb(25, 37, 63);
-        background-image: linear-gradient(120deg, #dadbde 50%, #f8fafa 100%);
+        background-image: linear-gradient(120deg, #dbdde2 60%, #b5afaf 100%);
         background-repeat: no-repeat;
         background-size: 100% 0.1em;
-        background-position: 0 98%;
+        background-position: 10% 100%;
         text-decoration: none;
         transition: background-size 0.25s ease-in;
       }
@@ -49,25 +47,23 @@
       }
 
       h2 {
-        color: rgb(25, 37, 63);
-        font-size: 1.5rem;
         font-weight: 200;
-        letter-spacing: 1px;
-        border-bottom: 1px solid rgb(213, 214, 216);
+        border-bottom: 1px dashed rgb(213, 214, 216);
+        font: 1.1rem/1.5 "Lucida Console", Monaco, monospace;
       }
 
       @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
         header {
-          font-size: 2.7rem;
+          font: 1.75rem/1.2 "Lucida Console", Monaco, monospace;
         }
         article {
-          top: 6rem;
-          left: 1.5rem;
-          font: 1.5rem/1.7 'Helvetica Neue', Helvetica, Arial, sans-serif;
+          margin-top: 6rem;
+          left: 0.1rem;
           max-width: 100%;
+          font: 1.5rem/1.7 "Lucida Console", Monaco, monospace;
         }
         h2 {
-          font-size: 3rem;
+          font: 1.75rem/1.2 "Lucida Console", Monaco, monospace;
         }
       }
     </style>
@@ -81,21 +77,21 @@
 
     <article>
       <h2>Portals</h2>
-      <a href="http://github.com/srdjan">@github ≈</a>
-      <a href="http://gotium.com">@blog ≈</a>
+      <a href="http://github.com/srdjan">@github</a>&emsp;
+      <a href="http://gotium.com">@blog</a>&emsp;
       <a href="https://twitter.com/djidja8">@twitter</a>
     </article>
 
     <article>
       <h2>Work, now</h2>
-      • Co-Founder & CTO <a href="https://klinchit.app">@KlinchIt.app</a><br />
+      • Co-Founder & CTO&emsp;<a href="https://klinchit.app">@ KlinchIt.app</a><br/>
     </article>
 
     <article>
       <h2>Work, before</h2>
-      • Chief Architect @ Lifion by ADP<br />
-      • Principal Architect @ ThoughtWorks<br />
-      • CTO @ Cignium<br />
+      • Chief Architect&emsp;@Lifion by ADP<br/>
+      • Principal Architect&emsp;@ThoughtWorks<br/>
+      • CTO&emsp;@Cignium<br/>
     </article>
   </body>
 </html>
