added auto showing and closing for the top bar

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </style>
     <script type="text/javascript" src="cards.js"></script>  
   </head>
-  <body onmouseover="" onload="cards();">
+  <body onmouseover="" onload="init();">
     <div class="cards">
       <div class="card"></div>
       <div class="card"></div>
