--- a/index.html
+++ b/index.html
@@ -75,16 +75,19 @@
 
       @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
         header {
-          font: 1.75rem/1.2 "Lucida Console", Monaco, monospace;
+          font: 2.3rem/1.2 "Lucida Console", Monaco, monospace;
         }
         article {
           margin-top: 6rem;
           left: 0.1rem;
           max-width: 100%;
-          font: 1.5rem/1.7 "Lucida Console", Monaco, monospace;
+          font: 1.9rem/1.7 "Lucida Console", Monaco, monospace;
         }
         h2 {
-          font: 1.75rem/1.2 "Lucida Console", Monaco, monospace;
+          font: 2.3rem/1.2 "Lucida Console", Monaco, monospace;
+        }
+        .cards {
+          height: 5vmin;
         }
       }
     </style>
