--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Personal Github page: Srdjan Strbanovic</title>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
+    <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.5/lib/darkmode-js.min.js"></script>
+
     <style type="text/css">
       html {
         height: 100%;
@@ -12,46 +14,62 @@
       }
 
       body {
-        margin: 0; 
+        margin: 0;
         padding: 0;
-        color:rgb(25, 37, 63);
         text-align: center;
         place-items: center;
+        font: 1.1rem/1.3 'Lucida Console', Monaco, monospace;
       }
 
       header {
-        line-height: 110%;
-        margin-top: 3rem;
-        font: 1.1rem/1.3 "Lucida Console", Monaco, monospace;
+        position: relative;
+        top: 2rem;
+        padding-top: 2rem;;
       }
 
       article {
+        color: black;
         position: relative;
-        top: 1rem;
+        top: 4.5rem;
         left: 4.5rem;
-        border-bottom: #6e6b6b;
+        border-bottom: black;
         max-width: 80%;
-        font: 1rem/1.5 "Lucida Console", Monaco, monospace;
       }
-
       article a {
-        color:rgb(25, 37, 63);
-        background-image: linear-gradient(120deg, #dbdde2 60%, #b5afaf 100%);
-        background-repeat: no-repeat;
-        background-size: 100% 0.1em;
-        background-position: 10% 100%;
         text-decoration: none;
-        transition: background-size 0.25s ease-in;
+        color: black;
       }
       article a:hover {
-        background-size: 100% 68%;
         cursor: pointer;
+        text-decoration: underline;
+      }
+      
+      .darkmode--activated article, 
+      .darkmode--activated article a, 
+      .darkmode--activated h2, 
+      .darkmode--activated header {
+        color: #fff;
       }
 
       h2 {
         font-weight: 200;
         border-bottom: 1px dashed rgb(213, 214, 216);
-        font: 1.1rem/1.5 "Lucida Console", Monaco, monospace;
+        font: 1.1rem/1.5 'Lucida Console', Monaco, monospace;
+      }
+
+      @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
+        header {
+          font: 2.3rem/1.2 'Lucida Console', Monaco, monospace;
+        }
+        article {
+          margin-top: 6rem;
+          left: 0.1rem;
+          max-width: 100%;
+          font: 1.9rem/1.7 'Lucida Console', Monaco, monospace;
+        }
+        h2 {
+          font: 2.3rem/1.2 'Lucida Console', Monaco, monospace;
+        }
       }
 
       .cards {
@@ -131,5 +149,9 @@
       • Principal Architect&emsp;@ThoughtWorks<br/>
       • CTO&emsp;@Cignium<br/>
     </article>
+
+    <script>
+      new Darkmode().showWidget()
+    </script>
   </body>
 </html>
