added links to companies

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
         padding: 0;
         text-align: center;
         place-items: center;
-        font: 1.1rem/1.3 'Lucida Console', Monaco, monospace;
+        font: 1rem/1.3 'Lucida Console', Monaco, monospace;
       }
 
       header {
-        --min-font-size: 18;
-        --max-font-size: 22;
+        --min-font-size: 12;
+        --max-font-size: 16;
         font-size: clamp(
-          var(--min-font-size) * 1px,
+          var(--min-font-size) * 2px,
           var(--fluid-size),
           var(--max-font-size) * 1px
         );
@@ -41,13 +41,8 @@
       }
 
       article {
-        --min-font-size: 16;
-        --max-font-size: 20;
-        font-size: clamp(
-          var(--min-font-size) * 1px,
-          var(--fluid-size),
-          var(--max-font-size) * 1px
-        );
+        --min-font-size: 20;
+        --max-font-size: 22;
         color: black;
         position: relative;
         top: 4.5rem;
@@ -73,15 +68,9 @@
       }
 
       h2 {
-        --min-font-size: 18;
-        --max-font-size: 22;
-        font-size: clamp(
-          var(--min-font-size) * 1px,
-          var(--fluid-size),
-          var(--max-font-size) * 1px
-        );
-
-        font-weight: 200;
+        --min-font-size: 12;
+        --max-font-size: 16;
+          font-weight: 200;
         border-bottom: 1px dashed rgb(213, 214, 216);
       }
 
@@ -135,15 +124,14 @@
 
     <article>
       <h2>Work, now</h2>
-      • Co-Founder & CTO&emsp;<a href="https://klinchit.app">@KlinchIt.app</a
-      ><br />
+      • Co-Founder & CTO&emsp;<a href="https://klinchit.app">@KlinchIt.app</a><br/>
     </article>
 
     <article>
       <h2>Work, before</h2>
-      • Chief Architect&emsp;@Lifion by ADP<br />
-      • Principal Architect&emsp;@ThoughtWorks<br />
-      • CTO&emsp;@Cignium<br />
+      • Chief Architect&emsp;<a href="https://lifion.com/">@Lifion by ADP</a><br/>
+      • Principal Architect&emsp;<a href=https://www.thoughtworks.com/">@ThoughtWorks</a><br/>
+      • CTO&emsp;<a href="https://www.cignium.com/">@Cignium</a><br/>
     </article>
 
     <script>
