--- a/index.html
+++ b/index.html
@@ -5,51 +5,46 @@
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <meta content="utf-8" http-equiv="encoding" />
     <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.5/lib/darkmode-js.min.js"></script>
+    <script type="text/javascript" src="cards.js"></script>
 
     <style type="text/css">
       * {
         --fluid-size: var(--min-font-size) * 1px +
           (var(--max-font-size) - var(--min-font-size)) *
-          ((100vw - 420px) / (1200 - 420));
+          ((120vw - 420px) / (1200 - 420));
       }
 
       html {
         height: 100%;
         margin: 0 auto;
-        max-width: 45em;
+        max-width: 50em;
+        font-family: 'Lucida Console', Monaco, monospace;
+        --min-font-size: 18;
+        --max-font-size: 18;
+        font-size: clamp(
+          var(--min-font-size) * 1px,
+          var(--fluid-size),
+          var(--max-font-size) * 1px
+        );
       }
 
       body {
         margin: 0;
         padding: 0;
+        width: 100%;
         text-align: center;
         place-items: center;
-        font: 1rem/1.3 'Lucida Console', Monaco, monospace;
       }
 
       header {
-        --min-font-size: 12;
-        --max-font-size: 16;
-        font-size: clamp(
-          var(--min-font-size) * 2px,
-          var(--fluid-size),
-          var(--max-font-size) * 1px
-        );
         position: relative;
-        top: 4rem;
-        padding-bottom: 2rem;
+        margin: 4rem;
       }
 
       article {
-        --min-font-size: 20;
-        --max-font-size: 22;
-        color: black;
         position: relative;
-        top: 4.5rem;
-        left: 4.5rem;
-        border-bottom: black;
-        max-width: 80%;
-        padding-bottom: 1rem;
+        color: black;
+        margin: 2.5rem;
       }
       article a {
         text-decoration: none;
@@ -62,16 +57,9 @@
 
       .darkmode--activated article,
       .darkmode--activated article a,
-      .darkmode--activated h2,
+      .darkmode--activated h3,
       .darkmode--activated header {
         color: #fff;
-      }
-
-      h2 {
-        --min-font-size: 12;
-        --max-font-size: 16;
-          font-weight: 200;
-        border-bottom: 1px dashed rgb(213, 214, 216);
       }
 
       .cards {
@@ -79,7 +67,6 @@
         display: flex;
         -webkit-box-pack: center;
         justify-content: center;
-        max-width: 800px;
         height: 3vmin;
       }
       .card {
@@ -93,7 +80,6 @@
         transform: scale(1.2);
       }
     </style>
-    <script type="text/javascript" src="cards.js"></script>
   </head>
   <body onmouseover="" onload="init();">
     <div class="cards">
@@ -110,25 +96,26 @@
     </div>
 
     <header>
-      Srdjan Strbanovic<br />
-      Software Engineer<br />
-      NYC Tri-State Area<br />
+      <h3>Srdjan Strbanovic</br>
+          Software Engineer</br>
+          NYC Tri-State Area
+      </h3>
     </header>
 
     <article>
-      <h2>Portals</h2>
+      <h3>Portals</h3>
       <a href="http://github.com/srdjan">@github</a>&emsp;
       <a href="http://gotium.com">@blog</a>&emsp;
       <a href="https://twitter.com/djidja8">@twitter</a>
     </article>
 
     <article>
-      <h2>Work, now</h2>
+      <h3>Work, now</h3>
       • Co-Founder & CTO&emsp;<a href="https://klinchit.app">@KlinchIt.app</a><br/>
     </article>
 
     <article>
-      <h2>Work, before</h2>
+      <h3>Work, before</h3>
       • Chief Architect&emsp;<a href="https://lifion.com/">@Lifion by ADP</a><br/>
       • Principal Architect&emsp;<a href=https://www.thoughtworks.com/">@ThoughtWorks</a><br/>
       • CTO&emsp;<a href="https://www.cignium.com/">@Cignium</a><br/>
