--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
     <style type="text/css">
       html {
         height: 100vh;
-        max-width: 50em;
         margin: 0 auto;
         font-family: 'Lucida Console', Monaco, monospace;
-        font-size: max(1.5 * (1vw + 1vh) / 2, 12px);
+        font-size: max(1.3 * (1vw + 1vh) / 1.3, 12px);
       }
 
       body {
@@ -56,6 +55,7 @@
         -webkit-box-pack: center;
         justify-content: center;
         height: 5vmin;
+        width: 100vw;
       }
       .card {
         -webkit-box-flex: 1;
@@ -110,10 +110,7 @@
     </article>
 
     <script>
-      new Darkmode({
-        right: '47vw',
-        bottom: '26vmin'
-      }).showWidget()
+      new Darkmode().showWidget()
     </script>
   </body>
 </html>
