more font size adjustments

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         height: 100vh;
         margin: 0 auto;
         font-family: 'Lucida Console', Monaco, monospace;
-        font-size: max(1.3 * (1vw + 1vh) / 1.3, 12px);
+        font-size: min(1.4 * (1vw + .5vh) / 1.3, 24px);
       }
 
       body {
@@ -25,13 +25,13 @@
 
       header {
         position: relative;
-        margin: 4rem;
+        margin-top: 5vh;
       }
 
       article {
         position: relative;
         color: black;
-        margin: 2.5rem;
+        margin: 4.5vw;
       }
       article a {
         text-decoration: none;
@@ -54,7 +54,7 @@
         display: flex;
         -webkit-box-pack: center;
         justify-content: center;
-        height: 5vmin;
+        height: 4vmin;
         width: 100vw;
       }
       .card {
