--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         color: #fff;
       }
 
-      .cards {
+      nav {
         display: -webkit-box;
         display: flex;
         -webkit-box-pack: center;
@@ -70,7 +70,7 @@
     </style>
   </head>
   <body onmouseover="" onload="init()">
-    <div class="cards">
+    <nav>
       <div class="card"></div>
       <div class="card"></div>
       <div class="card"></div>
@@ -81,7 +81,7 @@
       <div class="card"></div>
       <div class="card"></div>
       <div class="card"></div>
-    </div>
+    </nav>
 
     <header>
       <h3>Srdjan Strbanovic</br>
