--- a/index.html
+++ b/index.html
@@ -12,20 +12,19 @@
         height: 100vh;
         margin: 0 auto;
         font-family: 'Lucida Console', Monaco, monospace;
-        font-size: min(1.4 * (1vw + .5vh) / 1.3, 24px);
+        font-size: clamp(1.2rem, 1.31rem, 1.9rem);
       }
 
       body {
         margin: 0;
         padding: 0;
-        width: 100%;
         text-align: center;
         place-items: center;
       }
 
       header {
         position: relative;
-        margin-top: 5vh;
+        margin-top: 10vh;
       }
 
       article {
@@ -54,7 +53,7 @@
         display: flex;
         -webkit-box-pack: center;
         justify-content: center;
-        height: 3vmin;
+        height: 2vmin;
         width: 100vw;
       }
       .card {
