--- a/index.html
+++ b/index.html
@@ -20,18 +20,14 @@
         text-align: center;
         place-items: center;
         font-family: 'Lucida Console', Monaco, monospace;
+        font-size: 20px;
       }
-      @media screen and (min-width: 320px) {
+      @media screen and (max-width: 420px)   {
         body {
-          font-size: calc(22px + 6 * ((100vw - 320px) / 680));
+          font-size: 1rem;
         }
       }
-      @media screen and (min-width: 1000px) {
-        body {
-          font-size: 20px;
-        }
-      }
-
+ 
       header {
         position: relative;
         margin-top: 10vh;
