--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
     <script type="text/javascript" src="cards.js"></script>
 
     <style type="text/css">
-      html {
-        height: 100vh;
-        width: 100vw;
+      html { 
         margin: 0 auto;
+        font-size: 65%;  
       }
-
+      @media only screen and (max-device-width: 480px) {
+	      html { font-size: 100%; }
+      }
+      
       body {
         margin: 0;
         padding: 0;
         text-align: center;
         place-items: center;
         font-family: 'Lucida Console', Monaco, monospace;
-        font-size: 20px;
+        font-size: 22px;
       }
-      @media screen and (max-width: 420px)   {
-        body {
-          font-size: 1rem;
-        }
+      @media screen and (min-width: 420px)   {
+        body { font-size: 1.9rem; }
       }
  
       header {
