moved init() to cards.js

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <meta content="utf-8" http-equiv="encoding" />
     <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.5/lib/darkmode-js.min.js"></script>
-    <script type="text/javascript" src="cards.js"></script>
+    <script defer type="text/javascript" src="cards.js"></script>
 
     <style type="text/css">
       html { 
@@ -74,7 +74,7 @@
       }
     </style>
   </head>
-  <body onmouseover="" onload="init()">
+  <body onmouseover="">
     <nav>
       <div class="card"></div>
       <div class="card"></div>
