--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <style type="text/css">
       html { 
         margin: 0 auto;
-        font-size: 65%;  
+        font-size: 55%;  
+        width: 65vw;
       }
       @media only screen and (max-device-width: 480px) {
 	      html { font-size: 100%; }
@@ -23,6 +24,8 @@
         place-items: center;
         font-family: 'Lucida Console', Monaco, monospace;
         font-size: 22px;
+        border-right: 1px dotted rgb(106, 30, 71);
+        border-left: 1px dotted rgb(106, 30, 71);
       }
       @media screen and (min-width: 420px)   {
         body { font-size: 1.9rem; }
@@ -30,7 +33,7 @@
  
       header {
         position: relative;
-        margin-top: 10vh;
+        margin-top: 8vh;
       }
 
       article {
@@ -60,7 +63,6 @@
         -webkit-box-pack: center;
         justify-content: center;
         height: 2vmin;
-        width: 100vw;
       }
       .card {
         -webkit-box-flex: 1;
