--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       • CTO&emsp;<a href="https://www.cignium.com/">@Cignium</a><br/>
     </article>
 
-    <footer>-</footer>
+    <footer>∆</footer>
     <script>
       new Darkmode().showWidget()
     </script>
