made footer font size a bit larger

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       }
       footer {
         margin-top: 8vh;
+        font-size: 1.3vw;  
       }
       article {
         position: relative;
