preload darkmode lib

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Personal Github page: Srdjan Strbanovic</title>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <meta content="utf-8" http-equiv="encoding" />
-    <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.5/lib/darkmode-js.min.js"></script>
+    <script preload src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.5/lib/darkmode-js.min.js"></script>
     <script type="module" src="./header.js"></script>
 
     <style type="text/css">
