--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Personal Github page: Srdjan Strbanovic</title>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <meta content="utf-8" http-equiv="encoding" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="module" src="./header.js"></script>
 
     <style type="text/css">
