--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Personal Github page: Srdjan Strbanovic</title>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
@@ -11,7 +11,7 @@
       html { 
         margin: 0 auto;
         font-size: 55%;  
-        width: 50vw;
+        width: 75vw;
       }
       @media only screen and (max-device-width: 480px) {
 	      html { 
