--- a/index.html
+++ b/index.html
@@ -10,30 +10,26 @@
     <style type="text/css">
       html { 
         margin: 0 auto;
-        font-size: 55%;  
         width: 75vw;
       }
-      @media only screen and (max-device-width: 480px) {
-	      html { 
-          font-size: 100%; 
-          width: 75vw;
-        }
-      }
-      
+
       body {
         margin: 0;
         padding: 0;
         text-align: center;
         place-items: center;
         font-family: 'Lucida Console', Monaco, monospace;
-        font-size: 22px;
+        font-size: 1.8rem;  
         border-right: 1px dotted rgb(20, 139, 70);
         border-left: 1px dotted rgb(106, 30, 71);
       }
-      @media screen and (min-width: 480px)   {
-        body { font-size: 1.9rem; }
+      @media only screen and (min-width: 480px)   {
+        body { font-size: 95%; }
+      }      
+      @media only screen and (max-width: 480px) {
+	      body { font-size: 75%; }
       }
- 
+
       header {
         position: relative;
         margin-top: 8vh;
