--- a/index.html
+++ b/index.html
@@ -88,6 +88,6 @@
       • CTO&emsp;<a href="https://www.cignium.com/">@Cignium</a><br/>
     </article>
 
-    <footer>∆</footer>
+    <footer>≈∆≈</footer>
   </body>
 </html>
