--- a/index.html
+++ b/index.html
@@ -19,20 +19,17 @@
         text-align: center;
         place-items: center;
         font-family: 'Lucida Console', Monaco, monospace;
-        font-size: 1.8rem;  
+        font-size: 1.1rem;  
         border-right: 1px dotted rgb(20, 139, 70);
         border-left: 1px dotted rgb(106, 30, 71);
-      }
-      @media only screen and (min-width: 480px)   {
-        body { font-size: 95%; }
-      }      
+      }   
       @media only screen and (max-width: 480px) {
 	      body { font-size: 75%; }
       }
 
       header {
         position: relative;
-        margin-top: 8vh;
+        margin-top: 6vh;
       }
       footer {
         margin-top: 10vh;
@@ -88,6 +85,6 @@
       • CTO&emsp;<a href="https://www.cignium.com/">@Cignium</a><br/>
     </article>
 
-    <footer>≈∆≈</footer>
+    <footer>≈˙∆˙≈</footer>
   </body>
 </html>
